--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,60 @@
         </ul>
       </address>
     </header>
-    <main></main>
+    <main>
+      <h1>List of work</h1>
+      <section>
+        <h2>Type of Works and filter</h2>
+        <ul>
+          <li>
+            <img src="" alt="Banking App Interface Concept" />
+            <h3>Banking App Interface Concept</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="" alt="Cashless Payment" />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="" alt="Meditation App" />
+            <h3>Meditation App</h3>
+            <p><App/p></p>
+          </li>
+
+          <li>
+            <img src="" alt="Taxi Service" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="" alt="Screen Illustrations" />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="" alt="Online Courses" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="" alt="Instagram Stories Concept" />
+            <h3>Instagram Stories Concept</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="" alt="Organic Food" />
+            <h3>Organic Food</h3>
+            <p>Web Site</p>
+          </li>
+          <li>
+            <img src="" alt="Fresh Coffee" />
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
