--- a/portfolio.html
+++ b/portfolio.html
@@ -29,54 +29,69 @@
         <h2>Type of Works and filter</h2>
         <ul>
           <li>
-            <img src="" alt="Banking App Interface Concept" />
+            <img
+              src="./images/section5/Banking.jpg"
+              alt="Banking App Interface Concept"
+            />
             <h3>Banking App Interface Concept</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="" alt="Cashless Payment" />
+            <img src="./images/section5/Cashless.jpg" alt="Cashless Payment" />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="" alt="Meditation App" />
+            <img src="./images/section5/Meditation.jpg" alt="Meditation App" />
             <h3>Meditation App</h3>
             <p><App/p></p>
           </li>
 
           <li>
-            <img src="" alt="Taxi Service" />
+            <img src="./images/section5/Taxi.jpg" alt=Taxi Service" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="" alt="Screen Illustrations" />
+            <img
+              src="./images/section5/ScreenIllustr.jpg"
+              alt="Screen Illustrations"
+            />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="" alt="Online Courses" />
+            <img src="./images/section5/Courses.jpg" alt="Online Courses" />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="" alt="Instagram Stories Concept" />
+            <img
+              src="./images/section5/StoriesConcept.jpg"
+              alt="Instagram Stories Concept"
+            />
             <h3>Instagram Stories Concept</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="" alt="Organic Food" />
+            <img src="./images/section5/FoodOrganic.jpg" alt="Organic Food" />
             <h3>Organic Food</h3>
             <p>Web Site</p>
           </li>
           <li>
-            <img src="" alt="Fresh Coffee" />
+            <img src="./images/section5/Cofee.jpg" alt="Fresh Coffee" />
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
