--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -12,7 +18,7 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="./index.html">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
@@ -29,26 +35,41 @@
         <h2>Type of Works and filter</h2>
         <ul>
           <li>
-            <img
-              src="./images/section5/Banking.jpg"
-              alt="Banking App Interface Concept"
-            />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <a href="./index.html">
+              <img
+                src="./images/section5/Banking.jpg"
+                alt="Banking App Interface Concept"
+                width=""
+              />
+              <h3>Banking App Interface Concept</h3>
+              <p>App</p>
+            </a>
           </li>
           <li>
-            <img src="./images/section5/Cashless.jpg" alt="Cashless Payment" />
+            <img
+              src="./images/section5/Cashless.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/section5/Meditation.jpg" alt="Meditation App" />
+            <img
+              src="./images/section5/Meditation.jpg"
+              alt="Meditation App"
+              width="360"
+            />
             <h3>Meditation App</h3>
             <p><App/p></p>
           </li>
 
           <li>
-            <img src="./images/section5/Taxi.jpg" alt=Taxi Service" />
+            <img
+              src="./images/section5/Taxi.jpg"
+              alt="Taxi Service "
+              width="360"
+            />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
@@ -56,12 +77,17 @@
             <img
               src="./images/section5/ScreenIllustr.jpg"
               alt="Screen Illustrations"
+              width="360"
             />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/section5/Courses.jpg" alt="Online Courses" />
+            <img
+              src="./images/section5/Courses.jpg"
+              alt="Online Courses"
+              width="360"
+            />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
@@ -69,17 +95,26 @@
             <img
               src="./images/section5/StoriesConcept.jpg"
               alt="Instagram Stories Concept"
+              width="360"
             />
             <h3>Instagram Stories Concept</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/section5/FoodOrganic.jpg" alt="Organic Food" />
+            <img
+              src="./images/section5/FoodOrganic.jpg"
+              alt="Organic Food"
+              width="360"
+            />
             <h3>Organic Food</h3>
             <p>Web Site</p>
           </li>
           <li>
-            <img src="./images/section5/Cofee.jpg" alt="Fresh Coffee" />
+            <img
+              src="./images/section5/Cofee.jpg"
+              alt="Fresh Coffee"
+              width="360"
+            />
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
           </li>
