--- a/index.html
+++ b/index.html
@@ -9,66 +9,78 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="body">
+
+  <body>
+    <!-- heder -->
     <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="header-nav-link">WebStudio</a>
-        <ul class="header-nav-list">
-          <li class="header-nav-item"><a href="./index.html">Studio</a></li>
-          <li class="header-nav-item">
-            <a href="./portfolio.html">Portfolio</a>
+      <nav>
+        <!-- logo -->
+        <a href="./index.html" class="header-link">
+          <span class="header-logo-left">Web</span>Studio</a
+        >
+        <!-- list -->
+        <ul class="list">
+          <li>
+            <a href="" class="link">Studio</a>
           </li>
-          <li class="header-nav-item"><a href="">Contacts</a></li>
+          <li class="header-item">
+            <a href="./portfolio.html" class="link">Portfolio</a>
+          </li>
+          <li class="header-nav-item"><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address class="address">
-        <ul>
-          <li class="address-link">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address>
+        <ul class="list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="header-link-mail link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="address-link">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="header-link--tel">
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <!--section1 main -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!--section1 main (hero)-->
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="btn">Order Service</button>
       </section>
+
       <!--section2 Features-->
-      <section>
+      <section class="about">
         <h2 hidden>Features</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
+        <ul class="list">
+          <li class="about-item">
+            <h3 class="about-heаder" about>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
+          <li class="about-item">
+            <h3 class="about-heаder">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
+          <li class="about-item">
+            <h3 class="about-heаder">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
+          <li class="about-item">
+            <h3 class="about-heаder">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -77,9 +89,9 @@
         </ul>
       </section>
       <!--section3 What are we doing-->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
+      <section class="wedoing">
+        <h2 class="wedoing-heder">What are we doing</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/section3/monitor.jpg"
@@ -106,7 +118,7 @@
       <!-- section4 You team -->
       <section>
         <h2>Our Team</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/section4/markguerrero.jpg"
@@ -146,8 +158,10 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a href="./index.html" class="header-logo"
+        ><span class="footer-logo-left">Web</span>Studio</a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
