--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
   <body>
     <!-- heder -->
     <header class="header">
-      <nav>
+      <!-- <nav > -->
         <!-- logo -->
-        <a href="./index.html" class="header-link">
-          <span class="header-logo-left">Web</span>Studio</a
+        <a href="./index.html" class="header-logo">
+          <span class="logo-left">Web</span>Studio</a
         >
         <!-- list -->
         <ul class="list">
           <li>
-            <a href="" class="link">Studio</a>
+            <a href="" class="header-nav">Studio</a>
           </li>
-          <li class="header-item">
-            <a href="./portfolio.html" class="link">Portfolio</a>
+          <li >
+            <a href="./portfolio.html" class="header-nav">Portfolio</a>
           </li>
-          <li class="header-nav-item"><a href="" class="link">Contacts</a></li>
+          <li ><a href="" class="header-nav">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="header-link-mail link"
+            <a href="mailto:info@devstudio.com" class="header-address"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-link--tel">
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+          <li >
+            <a href="tel:+110001111111" class="header-address ">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -90,7 +90,7 @@
       </section>
       <!--section3 What are we doing-->
       <section class="wedoing">
-        <h2 class="wedoing-heder">What are we doing</h2>
+        <h2 class="h2" >What are we doing</h2>
         <ul class="list">
           <li>
             <img
@@ -117,7 +117,7 @@
       </section>
       <!-- section4 You team -->
       <section>
-        <h2>Our Team</h2>
+        <h2 class="h2">Our Team</h2>
         <ul class="list">
           <li>
             <img
@@ -159,10 +159,10 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="header-logo"
-        ><span class="footer-logo-left">Web</span>Studio</a
+      <a href="./index.html" class="footer-logo"
+        ><span class="logo-left">Web</span>Studio</a
       >
-      <p>
+      <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
