--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <!-- heder -->
-    <header class="header">
+    <header>
       <!-- <nav > -->
         <!-- logo -->
         <a href="./index.html" class="header-logo">
