--- a/portfolio.html
+++ b/portfolio.html
@@ -11,21 +11,32 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a href="./index.html" class="header-logo">
+          <span class="logo-left">Web</span>Studio</a
+        >
+        <ul class="list">
+          <li><a href="./index.html" class="header-nav">Studio</a></li>
+          <li><a href="./portfolio.html" class="header-nav">Portfolio</a></li>
+          <li><a href="" class="header-nav">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="header-address"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="header-address"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
@@ -33,7 +44,7 @@
       <h1>List of work</h1>
       <section>
         <h2>Type of Works and filter</h2>
-        <ul>
+        <ul class="list">
           <li>
             <a href="./index.html">
               <img
@@ -121,9 +132,11 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo"
+        ><span class="logo-left">Web</span>Studio</a
+      >
+      <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
