Css for color text font
made сss for text font and color

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,11 @@
         >
         <ul class="list">
           <li><a href="./index.html" class="header-nav">Studio</a></li>
-          <li><a href="./portfolio.html" class="header-nav">Portfolio</a></li>
+          <li>
+            <a href="./portfolio.html" class="header-nav header-activ"
+              >Portfolio</a
+            >
+          </li>
           <li><a href="" class="header-nav">Contacts</a></li>
         </ul>
       </nav>
@@ -45,12 +49,19 @@
       <section>
         <h2>Type of Works and filter</h2>
         <ul class="list">
+          <li><button type="button" class="btn">All</button></li>
+          <li><button type="button" class="btn">Veb site</button></li>
+          <li><button type="button" class="btn">App</button></li>
+          <li><button type="button" class="btn">Design</button></li>
+          <li><button type="button" class="btn">Marketing</button></li>
+        </ul>
+        <ul class="list">
           <li>
             <a href="./index.html">
               <img
                 src="./images/section5/Banking.jpg"
                 alt="Banking App Interface Concept"
-                width=""
+                width="360"
               />
               <h3>Banking App Interface Concept</h3>
               <p>App</p>
@@ -72,7 +83,7 @@
               width="360"
             />
             <h3>Meditation App</h3>
-            <p><App/p></p>
+            <p>App</p>
           </li>
 
           <li>
