--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- list -->
         <ul class="list">
           <li>
-            <a href="" class="header-nav">Studio</a>
+            <a href="" class="header-nav header-activ">Studio</a>
           </li>
           <li >
             <a href="./portfolio.html" class="header-nav">Portfolio</a>
