background for our team

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </ul>
       </section>
       <!-- section4 You team -->
-      <section>
+      <section class="section-our-team">
         <h2 class="h2">Our Team</h2>
         <ul class="list">
           <li>
