--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!-- heder -->
     <header>
       <!-- <nav > -->
-        <!-- logo -->
+      <!-- logo -->
+      <nav>
         <a href="./index.html" class="header-logo">
           <span class="logo-left">Web</span>Studio</a
         >
@@ -28,10 +29,10 @@
           <li>
             <a href="" class="header-nav header-activ">Studio</a>
           </li>
-          <li >
+          <li>
             <a href="./portfolio.html" class="header-nav">Portfolio</a>
           </li>
-          <li ><a href="" class="header-nav">Contacts</a></li>
+          <li><a href="" class="header-nav">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -41,8 +42,10 @@
               >info@devstudio.com</a
             >
           </li>
-          <li >
-            <a href="tel:+110001111111" class="header-address ">+11 (000) 111-11-11</a>
+          <li>
+            <a href="tel:+110001111111" class="header-address"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -53,7 +56,6 @@
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="btn">Order Service</button>
       </section>
-
       <!--section2 Features-->
       <section class="about">
         <h2 hidden>Features</h2>
@@ -90,7 +92,7 @@
       </section>
       <!--section3 What are we doing-->
       <section class="wedoing">
-        <h2 class="h2" >What are we doing</h2>
+        <h2 class="h2">What are we doing</h2>
         <ul class="list">
           <li>
             <img
