--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <!-- heder -->
     <header>
       <!-- <nav > -->
-      <!-- logo -->
       <nav>
+        <!-- logo -->
         <a href="./index.html" class="header-logo">
-          <span class="logo-left">Web</span>Studio</a
+          Web<span class="logo-right">Studio</span></a
         >
         <!-- list -->
         <ul class="list">
@@ -35,17 +35,13 @@
           <li><a href="" class="header-nav">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="header-address"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+110001111111" class="header-address"
-              >+11 (000) 111-11-11</a
-            >
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -161,9 +157,10 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo"
-        ><span class="logo-left">Web</span>Studio</a
+      <a href="./index.html" class="footer-logo">
+        Web<span class="logo-right-footer">Studio</span></a
       >
+
       <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
