--- a/portfolio.html
+++ b/portfolio.html
@@ -17,29 +17,25 @@
     <header>
       <nav>
         <a href="./index.html" class="header-logo">
-          <span class="logo-left">Web</span>Studio</a
+          Web<span class="logo-right">Studio</span></a
         >
-        <ul class="list">
-          <li><a href="./index.html" class="header-nav">Studio</a></li>
+        <ul class="list-nav">
+          <li><a href="./index.html" class="link">Studio</a></li>
           <li>
-            <a href="./portfolio.html" class="header-nav header-activ"
-              >Portfolio</a
-            >
+            <a href="./portfolio.html" class="link header-activ">Portfolio</a>
           </li>
-          <li><a href="" class="header-nav">Contacts</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="header-address"
+            <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="header-address"
-              >+11 (000) 111-11-11</a
-            >
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -144,8 +140,8 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo"
-        ><span class="logo-left">Web</span>Studio</a
+      <a href="./index.html" class="footer-logo">
+        Web<span class="logo-right-footer">Studio</span></a
       >
       <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
