--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
           Web<span class="logo-right">Studio</span></a
         >
         <!-- list -->
-        <ul class="list">
+        <ul class="list-nav">
           <li>
-            <a href="" class="header-nav header-activ">Studio</a>
+            <a href="" class="link header-activ">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="header-nav">Portfolio</a>
+            <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
-          <li><a href="" class="header-nav">Contacts</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -50,7 +50,7 @@
       <!--section1 main (hero)-->
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="btn">Order Service</button>
+        <button type="button" class="btn-hero">Order Service</button>
       </section>
       <!--section2 Features-->
       <section class="about">
@@ -58,28 +58,28 @@
         <ul class="list">
           <li class="about-item">
             <h3 class="about-heаder" about>Strategy</h3>
-            <p>
+            <p class="about-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="about-item">
             <h3 class="about-heаder">Punctuality</h3>
-            <p>
+            <p class="about-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="about-item">
             <h3 class="about-heаder">Diligence</h3>
-            <p>
+            <p class="about-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="about-item">
             <h3 class="about-heаder">Technologies</h3>
-            <p>
+            <p class="about-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
