work with header

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
       <!-- <nav > -->
       <nav>
         <!-- logo -->
-        <a href="./index.html" class="header-logo">
+        <a href="./index.html" class=" link header-logo">
           Web<span class="logo-right">Studio</span></a
         >
         <!-- list -->
-        <ul class="list-nav">
+        <ul class="list-nav list">
           <li>
-            <a href="" class="link header-activ">Studio</a>
+            <a href="./index.htm" class="link-header link  header-activ">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link">Portfolio</a>
+            <a href="./portfolio.html" class="link-header link ">Portfolio</a>
           </li>
-          <li><a href="" class="link">Contacts</a></li>
+          <li><a href="" class="link-header link">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
@@ -55,7 +55,7 @@
       <!--section2 Features-->
       <section class="about">
         <h2 hidden>Features</h2>
-        <ul class="list">
+        <ul class="list-other list">
           <li class="about-item">
             <h3 class="about-heаder" about>Strategy</h3>
             <p class="about-text">
@@ -89,7 +89,7 @@
       <!--section3 What are we doing-->
       <section class="wedoing">
         <h2 class="h2">What are we doing</h2>
-        <ul class="list">
+        <ul class="list-other list">
           <li>
             <img
               src="./images/section3/monitor.jpg"
@@ -116,7 +116,7 @@
       <!-- section4 You team -->
       <section class="section-our-team">
         <h2 class="h2">Our Team</h2>
-        <ul class="list">
+        <ul class="list-other list">
           <li>
             <img
               src="./images/section4/markguerrero.jpg"
