--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <a href="./index.html" class="header-logo">
           Web<span class="logo-right">Studio</span></a
         >
-        <ul class="list-nav">
+        <ul class="list-nav list">
           <li><a href="./index.html" class="link">Studio</a></li>
           <li>
             <a href="./portfolio.html" class="link header-activ">Portfolio</a>
@@ -28,7 +28,7 @@
         </ul>
       </nav>
       <address class="address">
-        <ul class="list">
+        <ul class="list-other list">
           <li>
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
@@ -44,14 +44,14 @@
       <h1>List of work</h1>
       <section>
         <h2>Type of Works and filter</h2>
-        <ul class="list">
+        <ul class="list-other list">
           <li><button type="button" class="btn">All</button></li>
           <li><button type="button" class="btn">Veb site</button></li>
           <li><button type="button" class="btn">App</button></li>
           <li><button type="button" class="btn">Design</button></li>
           <li><button type="button" class="btn">Marketing</button></li>
         </ul>
-        <ul class="list">
+        <ul class="list-other list">
           <li>
             <a href="./index.html">
               <img
