--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- list -->
         <ul class="list-nav list">
           <li>
-            <a href="./index.htm" class="link-header link  header-activ">Studio</a>
+            <a href="./index.html" class="link-header link  header-activ">Studio</a>
           </li>
           <li>
             <a href="./portfolio.html" class="link-header link ">Portfolio</a>
