--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- list -->
         <ul class="list-nav list">
           <li>
-            <a href="./index.html" class="link-header link  header-activ">Studio</a>
+            <a href="./index.html" class="link-header link">Studio</a>
           </li>
           <li>
             <a href="./portfolio.html" class="link-header link ">Portfolio</a>
@@ -38,10 +38,10 @@
       <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link-addr link">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link-addr link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
