--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!-- <nav > -->
       <nav>
         <!-- logo -->
-        <a href="./index.html" class=" link header-logo">
+        <a href="./index.html" class="link header-logo">
           Web<span class="logo-right">Studio</span></a
         >
         <!-- list -->
@@ -54,31 +54,31 @@
       </section>
       <!--section2 Features-->
       <section class="about">
-        <h2 hidden>Features</h2>
+        <h2 class="header-two" >Features</h2>
         <ul class="list-other list">
           <li class="about-item">
-            <h3 class="about-heаder" about>Strategy</h3>
+            <h3 class="header-three">Strategy</h3>
             <p class="about-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="about-item">
-            <h3 class="about-heаder">Punctuality</h3>
+            <h3 class="header-three">Punctuality</h3>
             <p class="about-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="about-item">
-            <h3 class="about-heаder">Diligence</h3>
+            <h3 class="header-three">Diligence</h3>
             <p class="about-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="about-item">
-            <h3 class="about-heаder">Technologies</h3>
+            <h3 class="header-three">Technologies</h3>
             <p class="about-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -88,7 +88,7 @@
       </section>
       <!--section3 What are we doing-->
       <section class="wedoing">
-        <h2 class="h2">What are we doing</h2>
+        <h2 class="header-two">What are we doing</h2>
         <ul class="list-other list">
           <li>
             <img
@@ -115,7 +115,7 @@
       </section>
       <!-- section4 You team -->
       <section class="section-our-team">
-        <h2 class="h2">Our Team</h2>
+        <h2 class="header-two">Our Team</h2>
         <ul class="list-other list">
           <li>
             <img
@@ -123,7 +123,7 @@
               alt="Photo Mark Guerrero"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="header_three">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -132,7 +132,7 @@
               alt="Photo Tom Ford"
               width="264"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="header_three">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -141,7 +141,7 @@
               alt="Photo Camila Garcia"
               width="264"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="header_three">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -150,14 +150,14 @@
               alt="Photo Daniel Wilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="header_three">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo">
+      <a href="./index.html" class="link footer-logo">
         Web<span class="logo-right-footer">Studio</span></a
       >
 
