--- a/portfolio.html
+++ b/portfolio.html
@@ -14,36 +14,42 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- heder -->
     <header>
+    <!-- <nav > -->  
       <nav>
-        <a href="./index.html" class="header-logo">
+         <!-- logo -->
+        <a href="./index.html" class="link header-logo">
           Web<span class="logo-right">Studio</span></a
         >
+        <!-- list -->
         <ul class="list-nav list">
-          <li><a href="./index.html" class="link">Studio</a></li>
           <li>
-            <a href="./portfolio.html" class="link header-activ">Portfolio</a>
+            <a href="./index.html" class="link-header link">Studio</a>
           </li>
-          <li><a href="" class="link">Contacts</a></li>
+          <li>
+            <a href="./portfolio.html" class="link-header link ">Portfolio</a>
+          </li>
+          <li><a href="" class="link-header link">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
-        <ul class="list-other list">
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="link-addr link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link-addr link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <h1>List of work</h1>
+      <h1 class="visually-hidden">List of work</h1>
       <section>
-        <h2>Type of Works and filter</h2>
+        <h2 class="visually-hidden">Type of Works and filter</h2>
         <ul class="list-other list">
           <li><button type="button" class="btn">All</button></li>
           <li><button type="button" class="btn">Veb site</button></li>
@@ -53,94 +59,110 @@
         </ul>
         <ul class="list-other list">
           <li>
-            <a href="./index.html">
+            <a href="" class="link-works link">
               <img
                 src="./images/section5/Banking.jpg"
                 alt="Banking App Interface Concept"
                 width="360"
               />
-              <h3>Banking App Interface Concept</h3>
-              <p>App</p>
+              <h3 class="header-three">Banking App Interface Concept</h3>
+              <p class="kidworks-paragr">App</p>
             </a>
           </li>
           <li>
+             <a href="">
             <img
               src="./images/section5/Cashless.jpg"
               alt="Cashless Payment"
               width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="header-three">Cashless Payment</h3>
+            <p class="kidworks-paragr">Marketing</p>
+            </a>
           </li>
           <li>
+            <a href="">
             <img
               src="./images/section5/Meditation.jpg"
               alt="Meditation App"
               width="360"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="header-three">Meditation App</h3>
+            <p class="kidworks-paragr">App</p>
+            </a>
           </li>
 
           <li>
+            <a href="">
             <img
               src="./images/section5/Taxi.jpg"
               alt="Taxi Service "
               width="360"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="header-three">Taxi Service</h3>
+            <p class="kidworks-paragr">Marketing</p>
+            </a>
           </li>
           <li>
+            <a href="">
             <img
               src="./images/section5/ScreenIllustr.jpg"
               alt="Screen Illustrations"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="header-three">Screen Illustrations</h3>
+            <p class="kidworks-paragr">Design</p>
+            </a>
           </li>
           <li>
+            <a href="">
             <img
               src="./images/section5/Courses.jpg"
               alt="Online Courses"
               width="360"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="header-three">Online Courses</h3>
+            <p class="kidworks-paragr">Marketing</p>
+            </a>
           </li>
           <li>
+            <a href="">
             <img
               src="./images/section5/StoriesConcept.jpg"
               alt="Instagram Stories Concept"
               width="360"
             />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <h3 class="header-three">Instagram Stories Concept</h3>
+            <p class="kidworks-paragr">Design</p>
+            </a>
           </li>
           <li>
+            <a href="">
             <img
               src="./images/section5/FoodOrganic.jpg"
               alt="Organic Food"
               width="360"
             />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+            <h3 class="header-three">Organic Food</h3>
+            <p class="kidworks-paragr">Web Site</p>
+            </a>
           </li>
           <li>
+            <a href="">
             <img
               src="./images/section5/Cofee.jpg"
               alt="Fresh Coffee"
               width="360"
             />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <h3 class="header-three">Fresh Coffee</h3>
+            <p class="kidworks-paragr">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo">
+      <a href="./index.html" class="link footer-logo">
         Web<span class="logo-right-footer">Studio</span></a
       >
       <p class="footer-paragraph">
