--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </section>
       <!--section2 Features-->
       <section class="about">
-        <h2 class="header-two" >Features</h2>
+        <h2 class="visually-hidden">Features</h2>
         <ul class="list-other list">
           <li class="about-item">
             <h3 class="header-three">Strategy</h3>
@@ -114,10 +114,10 @@
         </ul>
       </section>
       <!-- section4 You team -->
-      <section class="section-our-team">
-        <h2 class="header-two">Our Team</h2>
+      <section class="section-ourteam">
+        <h2 class="header-two ">Our Team</h2>
         <ul class="list-other list">
-          <li>
+          <li class="ourteam-list-item">
             <img
               src="./images/section4/markguerrero.jpg"
               alt="Photo Mark Guerrero"
@@ -126,7 +126,7 @@
             <h3 class="header_three">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li  class="ourteam-list-item">
             <img
               src="./images/section4/tomford.jpg"
               alt="Photo Tom Ford"
@@ -135,7 +135,7 @@
             <h3 class="header_three">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li  class="ourteam-list-item">
             <img
               src="./images/section4/camilagrcia.jpg"
               alt="Photo Camila Garcia"
@@ -144,7 +144,7 @@
             <h3 class="header_three">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li  class="ourteam-list-item" >
             <img
               src="./images/section4/danielwilson.jpg"
               alt="Photo Daniel Wilson"
