--- a/portfolio.html
+++ b/portfolio.html
@@ -47,12 +47,13 @@
       </address>
     </header>
     <main>
-      <h1 class="visually-hidden">List of work</h1>
       <section>
-        <h2 class="visually-hidden">Type of Works and filter</h2>
+      <h1 class="visually-hidden">List of work</h1>
+      
+        <!-- <h2 class="visually-hidden">Type of Works and filter</h2> -->
         <ul class="list-other list">
           <li><button type="button" class="btn">All</button></li>
-          <li><button type="button" class="btn">Veb site</button></li>
+          <li><button type="button" class="btn">Web Site</button></li>
           <li><button type="button" class="btn">App</button></li>
           <li><button type="button" class="btn">Design</button></li>
           <li><button type="button" class="btn">Marketing</button></li>
@@ -65,7 +66,7 @@
                 alt="Banking App Interface Concept"
                 width="360"
               />
-              <h3 class="header-three">Banking App Interface Concept</h3>
+              <h2 class="header-two-portfolio">Banking App Interface Concept</h2>
               <p class="kidworks-paragr">App</p>
             </a>
           </li>
@@ -76,7 +77,7 @@
               alt="Cashless Payment"
               width="360"
             />
-            <h3 class="header-three">Cashless Payment</h3>
+            <h2 class="header-two-portfolio">Cashless Payment</h2>
             <p class="kidworks-paragr">Marketing</p>
             </a>
           </li>
@@ -87,7 +88,7 @@
               alt="Meditation App"
               width="360"
             />
-            <h3 class="header-three">Meditation App</h3>
+            <h2 class="header-two-portfolio">Meditation App</h2>
             <p class="kidworks-paragr">App</p>
             </a>
           </li>
@@ -99,7 +100,7 @@
               alt="Taxi Service "
               width="360"
             />
-            <h3 class="header-three">Taxi Service</h3>
+            <h2 class="header-two-portfolio">Taxi Service</h2>
             <p class="kidworks-paragr">Marketing</p>
             </a>
           </li>
@@ -110,7 +111,7 @@
               alt="Screen Illustrations"
               width="360"
             />
-            <h3 class="header-three">Screen Illustrations</h3>
+            <h2 class="header-two-portfolio">Screen Illustrations</h2>
             <p class="kidworks-paragr">Design</p>
             </a>
           </li>
@@ -121,7 +122,7 @@
               alt="Online Courses"
               width="360"
             />
-            <h3 class="header-three">Online Courses</h3>
+            <h2 class="header-two-portfolio">Online Courses</h2>
             <p class="kidworks-paragr">Marketing</p>
             </a>
           </li>
@@ -132,7 +133,7 @@
               alt="Instagram Stories Concept"
               width="360"
             />
-            <h3 class="header-three">Instagram Stories Concept</h3>
+            <h2 class="header-two-portfolio">Instagram Stories Concept</h2>
             <p class="kidworks-paragr">Design</p>
             </a>
           </li>
@@ -143,7 +144,7 @@
               alt="Organic Food"
               width="360"
             />
-            <h3 class="header-three">Organic Food</h3>
+            <h2 class="header-two-portfolio">Organic Food</h2>
             <p class="kidworks-paragr">Web Site</p>
             </a>
           </li>
@@ -154,7 +155,7 @@
               alt="Fresh Coffee"
               width="360"
             />
-            <h3 class="header-three">Fresh Coffee</h3>
+            <h2 class="header-two-portfolio">Fresh Coffee</h2>
             <p class="kidworks-paragr">Web Site</p>
             </a>
           </li>
