--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       </section>
       <!--section2 Features-->
       <section class="about">
-        <h2 class="visually-hidden">Features</h2>
+        <!-- <h2 class="visually-hidden">Features</h2> -->
+        <h2 hidden>Features</h2>
         <ul class="list-other list">
           <li class="about-item">
             <h3 class="header-three">Strategy</h3>
@@ -123,7 +124,7 @@
               alt="Photo Mark Guerrero"
               width="264"
             />
-            <h3 class="header_three">Mark Guerrero</h3>
+            <h3 class="header-three">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li  class="ourteam-list-item">
@@ -141,7 +142,7 @@
               alt="Photo Camila Garcia"
               width="264"
             />
-            <h3 class="header_three">Camila Garcia</h3>
+            <h3 class="header-three">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li  class="ourteam-list-item" >
@@ -150,7 +151,7 @@
               alt="Photo Daniel Wilson"
               width="264"
             />
-            <h3 class="header_three">Daniel Wilson</h3>
+            <h3 class="header-three">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
