--- a/portfolio.html
+++ b/portfolio.html
@@ -48,8 +48,8 @@
     </header>
     <main>
       <section>
-        <h1 class="visually-hidden">List of work</h1>
-      
+        <!-- <h1 class="visually-hidden">List of work</h1> -->
+        <h1 hidden>List of work</h1>
         <!-- <h2 class="visually-hidden">Type of Works and filter</h2> -->
         <ul class="list-other list">
           <li><button type="button" class="btn">All</button></li>
