--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!--section2 Features-->
       <section class="about">
         <!-- <h2 class="visually-hidden">Features</h2> -->
-        <h2 hidden class="visually-hidden">Features</h2>
+        <h2 hidden class="visually-hidden color-header">Features</h2>
         <ul class="list-other list">
           <li class="about-item">
             <h3 class="header-three">Strategy</h3>
